--- a/LibriVox/StoryBoard/Discover.storyboard
+++ b/LibriVox/StoryBoard/Discover.storyboard
@@ -279,7 +279,7 @@
         <!--CategoriesVC-->
         <scene sceneID="VH7-1y-x8m">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="QUE-XB-uw7" customClass="CategoriesVC" customModule="Narrativia" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="genreVC" modalPresentationStyle="fullScreen" id="QUE-XB-uw7" customClass="CategoriesVC" customModule="Narrativia" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4Kt-Xy-Rog">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1256,7 +1256,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="8ga-zw-Ens"/>
         <segue reference="Aij-Aa-48c"/>
-        <segue reference="vDx-pZ-vS1"/>
+        <segue reference="UtY-K6-b4Z"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="ellipsis.circle" catalog="system" width="128" height="123"/>
@@ -1264,11 +1264,11 @@
         <image name="pause" width="512" height="512"/>
         <image name="play" width="512" height="512"/>
         <image name="play-button" width="512" height="512"/>
-        <image name="star" catalog="system" width="128" height="116"/>
         <image name="star" width="512" height="512"/>
+        <image name="star" catalog="system" width="128" height="116"/>
         <image name="starOn" width="512" height="512"/>
         <namedColor name="AccentColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.79199999570846558" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Green Tone">
             <color red="0.6119999885559082" green="0.85500001907348633" blue="0.52499997615814209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
