--- a/LibriVox/StoryBoard/Discover.storyboard
+++ b/LibriVox/StoryBoard/Discover.storyboard
@@ -618,6 +618,11 @@
                                                 <constraint firstItem="diX-S7-eHu" firstAttribute="top" secondItem="QEw-mV-yK3" secondAttribute="bottom" constant="10" id="vdI-Bt-1SM"/>
                                             </constraints>
                                         </collectionViewCellContentView>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <integer key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                         <connections>
                                             <outlet property="authorPhoto" destination="QEw-mV-yK3" id="shG-xf-L3m"/>
                                             <outlet property="nameAuthor" destination="diX-S7-eHu" id="1cG-cU-5qN"/>
@@ -701,7 +706,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Percy Jackson: Visitou Morpheus" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ru-Mu-QVE">
-                                                    <rect key="frame" x="0.0" y="195" width="175" height="41"/>
+                                                    <rect key="frame" x="0.0" y="195" width="170" height="41"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="41" id="1VN-B7-MYm"/>
                                                         <constraint firstAttribute="width" constant="170" id="lPY-vn-16R"/>
@@ -725,6 +730,11 @@
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                                         <size key="customSize" width="175" height="246"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <integer key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                         <connections>
                                             <outlet property="background" destination="zZJ-1p-GUM" id="cXc-Ge-bd9"/>
                                             <outlet property="imageBook" destination="5Dt-iS-m7a" id="Ze6-nb-61U"/>
@@ -1254,9 +1264,9 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="8ga-zw-Ens"/>
+        <segue reference="ZDj-aF-5QN"/>
         <segue reference="Aij-Aa-48c"/>
-        <segue reference="UtY-K6-b4Z"/>
+        <segue reference="vDx-pZ-vS1"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="ellipsis.circle" catalog="system" width="128" height="123"/>
@@ -1264,8 +1274,8 @@
         <image name="pause" width="512" height="512"/>
         <image name="play" width="512" height="512"/>
         <image name="play-button" width="512" height="512"/>
-        <image name="star" width="512" height="512"/>
         <image name="star" catalog="system" width="128" height="116"/>
+        <image name="star" width="512" height="512"/>
         <image name="starOn" width="512" height="512"/>
         <namedColor name="AccentColor">
             <color red="1" green="0.79199999570846558" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
